# desmos-programming-language

./: .gitignore  README.md  pyproject.toml  script.js
desmos/: calculator.js  index.html
desmos_compiler/: __main__.py  assembler.py  ast.py  compile_intermediate.py  compiler.py  desmos_implementation.py  generate_desmos.py  grammar.lark  intermediate.py  intermediate_compiler.py  intermediate_line_program.py  main.py  old.py  old_compiler.py  optimization.py  parse.py  parser.py  syntax_tree.py  testing.py
desmos_compiler/compiler/: ast_transformations.py  compiler.py  globals.py  variable_scope.py
examples/: gcd.desmos
programs/: prog01.desmos
src/: transpiler.py
standard/: README.md  assembly.md  desmos.md  intermediate.md  language.md
tests/: conftest.py  test_assembler.py  test_compile_syntax_tree.py  test_compiler.py  test_desmos_implementation.py  test_generate_desmos.py  test_ing.py  test_intermediate.py  test_intermediate_compiler.py  test_intermediate_line_program.py  test_parser.py  utils.py
