[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "desmos-compiler"
authors = [
    {name = "Brady Bhalla"},
]
requires-python = ">=3.10"
dependencies = ["lark", "pytest", "selenium >= 4.0"]
dynamic = ["version"]

[project.scripts]
desmoscc = "desmos_compiler.main:main"

[tool.setuptools]
packages = ["desmos_compiler", "tests"]
